--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firebaseprofilertree",
+  "name": "firebase-profiler-tree",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
